<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Transparent"
    android:textAlignment="center"
    tools:context=".fragments.AddEmployeeFragment">

    <android.widget.Button
        android:id="@+id/task_save_button"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/task_save_task"
        android:textAlignment="center"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_describe_field" />

    <android.widget.Button
        android:id="@+id/task_back_button"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:background="#F44336"
        android:text="@string/task_go_back"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#20BEF9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_save_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="391dp"
        android:layout_height="45dp"
        android:layout_marginTop="124dp"
        android:hint="@string/task_new_task"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textColorHint="@color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <android.widget.EditText
        android:id="@+id/task_name_field"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <android.widget.EditText
        android:id="@+id/task_describe_field"
        android:layout_width="215dp"
        android:layout_height="231dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/task_describe"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_field"
        tools:ignore="MissingConstraints,RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>