<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Transparent"
    android:textAlignment="center"
    tools:context=".fragments.AddEmployeeFragment">

    <android.widget.Button
        android:id="@+id/employee_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/employee_save"
        android:textAlignment="center"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_PESEL" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:hint="@string/login"
        android:textAlignment="center"
        android:textColor="#F4F1F1"
        android:textColorHint="#F8F5F5"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <android.widget.EditText
        android:id="@+id/employee_name"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <android.widget.EditText
        android:id="@+id/employee_surname"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_surname"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_name"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <android.widget.EditText
        android:id="@+id/employee_hourly_rate"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_hourly_rate"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_surname"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <android.widget.EditText
        android:id="@+id/employee_PESEL"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_pesel"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_hourly_rate"
        tools:ignore="MissingConstraints,RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>