<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Transparent"
    android:textAlignment="center"
    tools:context=".fragments.AddEmployeeFragment">

    <android.widget.Button
        android:id="@+id/task_save_button"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/task_save_task"
        android:textAlignment="center"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employees" />

    <android.widget.Button
        android:id="@+id/task_back_button"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"

        android:text="@string/task_go_back"
        android:textAlignment="center"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_save_button" />

    <!--
    <TextView
        android:id="@+id/taskId"
        android:layout_width="391dp"
        android:layout_height="45dp"
        android:hint="@string/task_new_task"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textColorHint="@color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="16dp" />-->

    <android.widget.Button
        android:id="@+id/task_delete_button"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/rounded_corners"
        android:text="@string/task_delete"
        android:textAlignment="center"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_back_button" />

    <android.widget.EditText
        android:id="@+id/task_name_field"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <android.widget.EditText
        android:id="@+id/task_describe_field"
        android:layout_width="333dp"
        android:layout_height="118dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/task_describe"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_field"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Spinner
        android:id="@+id/statuses"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_input"
        android:dropDownVerticalOffset="35dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        android:tooltipText="sadasd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_describe_field" />

    <Spinner
        android:id="@+id/employees"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_input"
        android:dropDownVerticalOffset="35dp"
        android:textColor="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statuses" />


</androidx.constraintlayout.widget.ConstraintLayout>