<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Transparent"
    tools:context=".fragments.LoginFragment">


    <android.widget.Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/sign_up"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />

    <android.widget.TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <android.widget.EditText
        android:id="@+id/password_input_login"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_input"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_login"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/login"
        android:textColor="#20BEF9"
        android:textColorHint="#20BEF9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_login" />

    <android.widget.EditText
        android:id="@+id/email_input_login"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_input"
        android:contextClickable="false"
        android:drawableStart="@drawable/key_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#5D5C5D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#5D5C5D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:hint="@string/login"
        android:textColor="#F4F1F1"
        android:textColorHint="#F8F5F5"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>